# CREW

./: .gitignore  LICENSE  README.md
crew-algorithms/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  test.sh
crew-algorithms/analysis/: cognitive_test_analysis.py  feedback_alignment.py  feedback_distribution.py
crew-algorithms/crew_algorithms/auto_encoder/: README.md  __init__.py  __main__.py  environment_dataset.py  model.py  transforms.py  utils.py
crew-algorithms/crew_algorithms/auto_encoder/weights/: encoder_bowling.pth
crew-algorithms/crew_algorithms/conf/: auto_encoder.yaml  ddpg.yaml  deep_tamer.yaml  random_policy.yaml
crew-algorithms/crew_algorithms/conf/envs/: bowling.yaml  find_treasure.yaml  (+2 more)
crew-algorithms/crew_algorithms/ddpg/: __main__.py  audio_feedback.py  config.py  eval.py  logger.py  policy.py  utils.py
crew-algorithms/crew_algorithms/deep_tamer/: __init__.py  __main__.py  eval.py  loss.py  policy.py  utils.py
crew-algorithms/crew_algorithms/envs/: configs.py  unity.py
crew-algorithms/crew_algorithms/random_policy/: __main__.py  test.py  test_1.py  utils.py
crew-algorithms/crew_algorithms/sac/: __main__.py  audio_feedback.py  config.py  eval.py  imitation_learning.py  logger.py  policy.py  trajectory_feedback.py  utils.py  written_feedback_queue.pkl
crew-algorithms/crew_algorithms/utils/: common_utils.py  model_utils.py  rl_utils.py  transforms.py  wandb_utils.py
crew-algorithms/docs/: conf.py  deep_tamer.rst  index.rst
crew-algorithms/docs/_templates/: crew_autosummary.rst
(+255 files in other folders)
